--- a/Trainings/index.html
+++ b/Trainings/index.html
@@ -19,6 +19,7 @@
             <h1>Trainings</h1>
         </div>
         <div id="header-right">
+            <button class="trainings-button selected">All courses</button>
             <button class="trainings-button">My trainings</button>
         </div>
     </header>
