--- a/Trainings/index.html
+++ b/Trainings/index.html
@@ -20,7 +20,10 @@
         </div>
         <div id="header-right">
             <button class="trainings-button selected">All courses</button>
-            <button class="trainings-button">My trainings</button>
+            <button class="trainings-button">
+                <div class="notification-number">10</div>
+                My trainings
+            </button>
         </div>
     </header>
 
