Dodanie rozróżniania do którego kursu zapisany jest użytkownik i którego jest właścicielem

--- a/App/Frontend/trainings-app/public/index.html
+++ b/App/Frontend/trainings-app/public/index.html
@@ -34,6 +34,8 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet">
     <title>Trainings</title>
   </head>
   <body>
